src/scss/components/_form.scss
form {
    counter-reset: invalid-fields valid-fields;
}

.input {
    display: flex;
    flex-direction: column;
    &>label {
        order: -1;
    }
    &>input, &>select, &>textarea {
        form.mark-required &:required+label::after {
            content: " *";
            color: red;
            font-size: .9em;
            font-weight: bold;
        }
    }
}

label {
    padding: 3px 0px;
    display: inline-block;
    font-weight: bold;
    color: $black;
}

input:not([type='checkbox']):not([type='radio']), select, textarea {
    width: 100%;
    padding: 8px;
    line-height: 17px;
    margin-bottom: 5px;
    border: 1px solid lightgray;
    border-bottom-width: 2px;
    outline: none;
    background: white;
    transition: border-bottom-color .5s, color .5s;
    &:focus {
        border-bottom-color: $blue;
        &:invalid {
            border-bottom-color: $red;
        }
    }
    &:invalid {
        box-shadow: none; // remove firefox style
    }
}

input:not([type='checkbox']):not([type='radio']), select {
    height: 36px;
}

input[type='checkbox'] {
    display: inline-block;
    appearance: none;
    width: 20px;
    height: 20px;
    background-color: white;
    border: 1px solid blue;
    outline: none;
    margin-right: 5px;
    &:before {
        content: "✔";
        width: 18px;
        padding-top: 2px;
        line-height: 16px;
        text-align: center;
        display: inline-block;
        color: white;
    }
    &:checked::before {
        color: blue;
    }
    label:hover>&::before, &:focus::before {
        font-weight: bold;
        border: 1px solid blue;
        line-height: 14px;
    }
}

input[type='radio'] {
    display: inline-block;
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 10px;
    background-color: white;
    border: 1px solid blue;
    outline: none;
    margin-right: 5px;
    &:before {
        content: "";
        width: 10px;
        height: 10px;
        margin: 4px;
        border-radius: 5px;
        display: block;
    }
    &:checked::before {
        background-color: blue;
    }
    &:hover, &:focus {
        border-width: 2px;
        &:before {
            margin: 3px;
        }
    }
}

select:required:invalid:not(:focus) {
    color: lightgray;
}
select {
    appearance: none;
    background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='7' viewBox='0 0 10 7' width='10' xmlns='http://www.w3.org/2000/svg'><path d='M0 0 H10 L5 7 Z'/></svg>");
    background-repeat: no-repeat;
    background-position: calc(100% - 10px) center;
}

.resize-h {
    resize: horizontal;
}
.resize-v {
    resize: vertical;
}
.no-resize {
    resize: none;
}
.resize-both {
    resize: both;
}

form:valid .hide-on-valid-form {
    display: none;
}
form:invalid .hide-on-invalid-form {
    display: none;
}

input:invalid, select:invalid, textarea:invalid {
    counter-increment: invalid-fields;
}
input:valid, select:valid, textarea:valid {
    counter-increment: valid-fields;
}

.counter-invalid-fields::after {
    content: counter(invalid-fields);
}
.counter-valid-fields::after {
    content: counter(valid-fields);
}

fieldset {
    border: 1px solid gray;
    &>legend {
        padding: 5px;
        font-size: 16px;
        color: rgb(50, 50, 50);
    }
}

